--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -1,7 +1,7 @@
 @mixin button-size($padding-y, $padding-x, $font-size, $border-raduis) {
   padding: $padding-y $padding-x;
-  font-size: $font-size;
-  border-radius: $border-raduis;
+  font-size: $font-size; // 大小
+  border-radius: $border-raduis; // 圆角
 }
 
 @mixin button-style(
@@ -10,7 +10,7 @@
   $color,
   $hover-background: lighten($background, 7.5%),
   $hover-border: lighten($border, 10%),
-  $hover-color: $color,
+  $hover-color: $color
 ) {
   color: $color;
   background: $background;
@@ -18,19 +18,19 @@
   &:hover {
     color: $hover-color;
     background: $hover-background;
-    border-color: $hover-border;    
+    border-color: $hover-border;
   }
   &:focus,
   &.focus {
     color: $hover-color;
     background: $hover-background;
-    border-color: $hover-border;    
+    border-color: $hover-border;
   }
   &:disabled,
   &.disabled {
     color: $color;
     background: $background;
-    border-color: $border;    
+    border-color: $border;
   }
 }
 
@@ -38,7 +38,7 @@
   $direction: 'top',
   $scaleStart: scaleY(0),
   $scaleEnd: scaleY(1),
-  $origin: center top,
+  $origin: center top
 ) {
   .zoom-in-#{$direction}-enter {
     opacity: 0;
@@ -47,8 +47,9 @@
   .zoom-in-#{$direction}-enter-active {
     opacity: 1;
     transform: $scaleEnd;
-    transition: transform 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms, opacity 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms;
-    transform-origin: $origin
+    transition: transform 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms,
+      opacity 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms;
+    transform-origin: $origin;
   }
   .zoom-in-#{$direction}-exit {
     opacity: 1;
@@ -56,7 +57,8 @@
   .zoom-in-#{$direction}-exit-active {
     opacity: 0;
     transform: $scaleStart;
-    transition: transform 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms, opacity 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms;
+    transition: transform 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms,
+      opacity 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms;
     transform-origin: $origin;
   }
 }
