--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -34,7 +34,7 @@
   @include button-size($btn-padding-y-sm, $btn-padding-x-sm, $btn-font-size-sm, $border-radius-sm);
 }
 
-.btn-rd {
+.btn-radio {
   @include button-size($btn-padding-y-sm, $btn-padding-x-sm, $btn-font-size-sm, 999rem);
 }
 
