--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,21 +1,21 @@
 // config
-@import "variables";
+@import 'variables';
 
 //layout
-@import "reboot";
+@import 'reboot';
 
 //mixin
-@import "mixin";
+@import 'mixin';
 
 // // animation
 // @import "animation";
 // // button src/components/Button/style.scss
 
-@import "../components/Button/style";
+@import '../components/Button/_style';
 
 // // menu
 
-// @import "../components/Menu/style";
+@import '../components/Menu/_style';
 
 // // icon
 // @import "../components/Icon/style";
@@ -31,6 +31,3 @@
 
 // //progress
 // @import "../components/Progress/style";
-
-
-
