--- a/src/components/Menu/_style.scss
+++ b/src/components/Menu/_style.scss
@@ -54,8 +54,9 @@
       transform: rotate(180deg) !important;
     }
   }
+
   .damon-submenu {
-    //display: none;
+    display: none;
     list-style: none;
     padding-left: 0;
     white-space: nowrap;
@@ -66,6 +67,10 @@
       transition: $menu-transition;
       color: $body-color;
     }
+  }
+
+  .damon-submenu.menu-opened {
+    display: block;
   }
 }
 
